crates/tree-sitter-abap/grammar.js
    program: $ => repeat($._statement),

    _statement: $ =>
      choice(
        $.class_declaration,
        $.class_implementation,
        $.class_publication,
        $.class_local_friend_publication,
        $.interface_declaration,
        $.function_implementation,
        $._implementation_statement
      ),

    _implementation_statement: $ =>
      choice(
        $.variable_declaration,
        $.chained_variable_declaration,
        $.types_declaration,
        $.chained_types_declaration,
        $.constants_declaration,
        $.chained_constants_declaration,
        $.loop_statement,
        $.field_symbol_declaration,
        $.chained_field_symbol_declaration,
        $.exit_statement,
        $.continue_statement,
        $.report_statement,
        $.if_statement,
        $.return_statement,
        $.check_statement,
        $.assignment,
        $.select_statement_obsolete,
        $.read_table_statement,
        $.try_catch_statement,
        $.write_statement,
        $.chained_write_statement,
        $.call_method,
        $.call_method_static,
        $.call_method_instance,
        $.call_function,
        $.raise_exception_statement,
        $.clear_statement,
        $.append_statement,
        $.create_object_statement,
        $.include_statement,
        $.macro_include,
        $.raise_statement,
        $.append_statement_obsolete
      ),

    class_declaration: $ =>
      seq(
        kw("class"),
        field("name", $.name),
        kw("definition"),
        // ABAP takes the additions in any order (abapGit writes both
        // `FINAL FOR TESTING DURATION SHORT RISK LEVEL HARMLESS` and
        // `FOR TESTING RISK LEVEL HARMLESS DURATION SHORT FINAL`).
        repeat($._class_option),
        optional(
          seq(
            optional(kw("global")),
            kw("friends"),
            field("friends", repeat1($.name))
          )
        ),
        ".",
        optional($.public_section),
        optional($.protected_section),
        optional($.private_section),
        kw("endclass"),
        "."
      ),

    _class_option: $ =>
      choice(
        kw("public"),
        seq(kw("inheriting"), kw("from"), field("superclass", $.name)),
        kw("abstract"),
        kw("final"),
        $._create_addition,
        seq(kw("shared"), kw("memory"), kw("enabled")),
        $._for_testing,
        seq(
          kw("risk"),
          kw("level"),
          choice(kw("critical"), kw("dangerous"), kw("harmless"))
        ),
        seq(kw("duration"), choice(kw("short"), kw("medium"), kw("long")))
      ),

    public_section: $ =>
      seq(kw("public"), kw("section"), ".", repeat($._class_components)),

    protected_section: $ =>
      seq(kw("protected"), kw("section"), ".", repeat($._class_components)),

    private_section: $ =>
      seq(kw("private"), kw("section"), ".", repeat($._class_components)),

    _class_components: $ =>
      choice(
        $.variable_declaration,
        alias($.method_declaration_class, $.method_declaration),
        $.constructor_declaration,
        $.method_redefinition,
        alias($.class_method_declaration_class, $.class_method_declaration),
        $.class_constructor_declaration,
        alias(
          $.chained_method_declaration_class,
          $.chained_method_declaration
        ),
        alias(
          $.chained_class_method_declaration_class,
          $.chained_class_method_declaration
        ),
        $._declaration_component
      ),

    // The declarations a class definition and an interface share, each also
    // in the chained form `KEYWORD: a ..., b ... .`, which ABAP reads as one
    // statement per comma-separated part.
    //
    // An attribute is a `variable_declaration` right under its section, however
    // it is written: `DATA a TYPE i.`, `CLASS-DATA a TYPE i.`, or a part of
    // `DATA: a TYPE i, BEGIN OF s, ..., END OF s.` (the structure `s` is one,
    // its components are not). So the chained form has no node of its own
    // here; in a method body it does (`chained_variable_declaration`).
    class_implementation: $ =>
      seq(
        kw("class"),
        field("name", $.name),
        kw("implementation"),
        ".",
        repeat($.method_implementation),
        kw("endclass"),
        "."
      ),

    method_parameters: $ =>
      seq(
        choice(
          seq(kw("value"), "(", $.name, ")"),
          seq(kw("reference"), "(", $.name, ")"),
          $._operand
        ),
        $._typing,
        optional(
          choice(
            kw("optional"),
            seq(
              kw("default"),
              choice(
                $.numeric_literal,
                $.character_literal,
                $.string_literal,
                $._data_object
              )
            )
          )
        )
      ),

    returning_parameter: $ =>
      seq(kw("returning"), kw("value"), "(", $.name, ")", $.complete_typing),

    constructor_declaration: $ =>
      seq(kw("methods"), $._constructor_declaration_body, "."),

    _constructor_declaration_body: $ =>
      seq(
        kw("constructor"),
        optional(kw("final")),
        field(
          "importing_parameters",
          optional($._method_declaration_importing)
        ),
        field("raising", optional($._method_declaration_raising)),
        field("exceptions", optional($._method_declaration_exceptions))
      ),

    method_redefinition: $ =>
      seq(kw("methods"), $._method_redefinition_body, "."),

    _method_redefinition_body: $ =>
      seq($.name, optional(kw("final")), kw("redefinition")),

    method_implementation: $ =>
      seq(
        kw("method"),
        field("name", $.name),
        ".",
        optional($.method_body),
        kw("endmethod"),
        "."
      ),

    method_body: $ => repeat1($._implementation_statement),

    interface_declaration: $ =>
      seq(
        kw("interface"),
        field("name", $.name),
        optional(kw("public")),
        ".",
        repeat($._interface_components),
        kw("endinterface"),
        "."
      ),

    _interface_components: $ =>
      choice(
        $.variable_declaration,
        alias($.method_declaration_interface, $.method_declaration),
        alias($.class_method_declaration_interface, $.class_method_declaration),
        alias(
          $.chained_method_declaration_interface,
          $.chained_method_declaration
        ),
        alias(
          $.chained_class_method_declaration_interface,
          $.chained_class_method_declaration
        ),
        $._declaration_component
      ),

    interfaces_declaration: $ =>
      seq(kw("interfaces"), $._interfaces_body, "."),

    chained_interfaces_declaration: $ =>
      seq(
        kw("interfaces"),
        ":",
        commaSep1(alias($._interfaces_body, $.interfaces_declaration)),
        "."
      ),

    _interfaces_body: $ =>
      seq(
        field("name", $.name),
        optional(seq(kw("partially"), kw("implemented"))),
        repeat(
          choice(
            seq(kw("all"), kw("methods"), choice(kw("abstract"), kw("final"))),
            seq(
              choice(kw("abstract"), kw("final")),
              kw("methods"),
              repeat1($.name)
            ),
            seq(
              kw("data"),
              kw("values"),
              repeat1(seq($.name, "=", $._general_expression_position))
            )
          )
        )
      ),

    structure_declaration: $ =>
      seq(
        kw("begin"),
        kw("of"),
        field("name", $.name),
        optional(kw("read-only")),
        ",",
        repeat(
          seq(
            choice($.component, $.structure_declaration, $.structure_include),
            ","
          )
        ),
        kw("end"),
        kw("of"),
        $.name
      ),

    component: $ =>
      seq(
        field("name", $.name),
        field("typing", alias($._data_object_typing, $.typing))
      ),

    // CONSTANTS and TYPES, single and chained. Their chains are a flat list of
    // parts, as ABAP reads them: `BEGIN OF s`, its components and `END OF s`
    // are parts of their own, so a structure can be closed in a later
    // statement (`TYPES BEGIN OF s. INCLUDE TYPE t. TYPES END OF s.`).
    constants_declaration: $ =>
      seq(kw("constants"), choice($._data_declaration_part, $._structure_part), "."),

    chained_constants_declaration: $ =>
      seq(
        kw("constants"),
        ":",
        commaSep1(
          choice(
            alias($._data_declaration_part, $.constant),
            $._structure_part
          )
        ),
        "."
      ),

    types_declaration: $ =>
      seq(kw("types"), choice($._data_declaration_part, $._structure_part), "."),

    chained_types_declaration: $ =>
      seq(
        kw("types"),
        ":",
        commaSep1(
          choice(
            alias($._data_declaration_part, $.type_definition),
            $._structure_part
          )
        ),
        "."
      ),

    _data_declaration_part: $ =>
      seq(
        field("name", $.name),
        optional(field("typing", alias($._data_object_typing, $.typing)))
      ),

    _structure_part: $ =>
      choice($.structure_begin, $.structure_end, $.structure_include),

    structure_begin: $ =>
      seq(
        kw("begin"),
        kw("of"),
        optional(kw("enum")),
        field("name", $.name),
        optional(kw("read-only")),
        optional(seq(kw("structure"), $.name)),
        optional(seq(kw("base"), kw("type"), $._type))
      ),

    structure_end: $ =>
      seq(
        kw("end"),
        kw("of"),
        optional(kw("enum")),
        field("name", $.name),
        optional(seq(kw("structure"), $.name))
      ),

    _type: $ => choice(alias($.name, $.type), alias($._compound_type, $.type)),

    _typing: $ => choice($.generic_typing, $.complete_typing),

    complete_typing: $ =>
      choice(
        seq(kw("type"), $._type),
        seq(kw("type"), kw("ref"), kw("to"), $._type),
        seq(kw("type"), kw("line"), kw("of"), $._type),
        seq(
          kw("type"),
          $._table_kind,
          kw("table"),
          // Without OF it is generic: `TYPE STANDARD TABLE`.
          optional(
            seq(
              kw("of"),
              optional(seq(kw("ref"), kw("to"))),
              $._type,
              optional($._table_keys)
            )
          )
        ),
        seq(kw("type"), kw("range"), kw("of"), $._type),
        seq(kw("like"), kw("line"), kw("of"), $._data_object)
      ),

    _table_kind: $ => choice(kw("standard"), kw("sorted"), kw("hashed")),

    // WITH [UNIQUE|NON-UNIQUE] DEFAULT KEY | KEY c ... | EMPTY KEY, and
    // secondary keys WITH [NON-]UNIQUE SORTED|HASHED KEY k COMPONENTS c ... .
    _table_keys: $ =>
      repeat1(
        prec.right(seq(
          kw("with"),
          optional(choice(kw("unique"), kw("non-unique"))),
          choice(
            seq(kw("default"), kw("key")),
            seq(kw("empty"), kw("key")),
            seq(
              optional(choice(kw("sorted"), kw("hashed"))),
              kw("key"),
              prec.right(repeat1($.name)),
              optional(seq(kw("components"), prec.right(repeat1($.name))))
            )
          )
        ))
      ),

    _data_object_typing: $ =>
      choice(
        //$._data_object_typing_built_in,
        $._data_object_typing_normal,
        //$._data_object_typing_enumerated,
        $._data_object_typing_reference,
        $._data_object_typing_itabs
        //$._data_object_typing_ranges
      ),

    variable_declaration: $ =>
      seq(
        kw("data"),
        field("name", $.name),
        field("typing", alias($._data_object_typing, $.typing)),
        "."
      ),

    // DATA: a TYPE i, BEGIN OF s, b TYPE i, END OF s. in a method body or a
    // program; a class's or an interface's is `_chained_attribute_declaration`.
    chained_variable_declaration: $ =>
      seq(
        kw("data"),
        ":",
        commaSep1(choice($.variable, $.structure_declaration)),
        "."
      ),

    variable: $ => seq($.name, alias($._data_object_typing, $.typing)),

    chained_field_symbol_declaration: $ =>
      seq(
        kw("field-symbols"),
        ":",
        repeat1(choice($.field_symbol, seq(",", $.field_symbol))),
        "."
      ),

    field_symbol: $ => seq(alias($.field_symbol_name, $.name), $._typing),

    _general_expression_position: $ =>
      choice(
        $.numeric_literal,
        $.character_literal,
        $.string_literal,
        $.string_template,
        $._data_object,
        $._calculation_expression
      ),

    arithmetic_expression: $ =>
      choice(
        prec.left(
          1,
          seq(
            $._general_expression_position,
            "+",
            $._general_expression_position
          )
        ),
        prec.left(
          1,
          seq(
            $._general_expression_position,
            "-",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "*",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "/",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "DIV",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "MOD",
            $._general_expression_position
          )
        ),
        prec.left(
          3,
          seq(
            $._general_expression_position,
            "**",
            $._general_expression_position
          )
        )
      ),

    _writeable_expression: $ =>
      choice(
        // inline declaration
        // constructor expression
        $.table_expression
      ),

    _data_object: $ =>
      choice(
        $.name,
        $.field_symbol_name,
        $.structured_data_object,
        $.attribute_access_static
      ),

    assignment: $ =>
      seq(
        choice($._data_object, $._writeable_expression),
        "=",
        $._general_expression_position,
        "."
      ),

    write_statement: $ =>
      seq(kw("write"), optional("/"), $._general_expression_position, "."),

    chained_write_statement: $ =>
      seq(
        kw("write"),
        ":",
        optional("/"),
        repeat1(
          choice(
            $._general_expression_position,
            seq(",", $._general_expression_position)
          )
        ),
        "."
      ),

    _operand: $ => choice($._escaped_operand, $.name),

    numeric_literal: $ => /[0-9]+/,

    // ABAP literals end on their line: a quote is escaped by doubling it
    // ('it''s', `a``b`), and a literal cannot run on to the next line. Without
    // the line end in the pattern, one misread quote swallows the statements
    // after it up to the next quote, lines later.
    character_literal: $ => /'([^'\r\n]|'')*'/,

    string_literal: $ => /`([^`\r\n]|``)*`/,

    // |text { expr } text|. The text ends on its line and escapes | { } \
    // with \. An embedded expression is kept opaque and may run over lines,
    // but may not hold a } (so not a nested template with one).
    string_template: $ => /\|([^|{}\\\r\n]|\\[^\r\n]|\{[^}]*\})*\|/,

    eol_comment: $ => seq('"', /[^\n]*/),

    name: $ => /[a-zA-Z_][a-zA-Z0-9_]{0,29}/i,
