crates/tree-sitter-abap/test/corpus/comments.txt
==================
single line comment
==================

* This is a comment

---
(program
  (bol_comment))

==================
statement after line comment
==================

* This is a comment
*&This is still a comment
data a type b.

---

(program
  (bol_comment)
  (bol_comment)
  (variable_declaration
    (name)
    (typing
      (type))))

==================
end of line comment
==================

" This is a comment
"This is a comment

---
(program
  (eol_comment)
  (eol_comment))

==================
end of line comment on same line as statement
==================

data a type b. " This is a comment

---

(program
  (variable_declaration
    (name)
    (typing
      (type)))
  (eol_comment))

==================
end of line comment within chained statement
==================

data: a type b, " This is a comment
      c type d. 

---

(program
  (chained_variable_declaration
    (variable
      (name)
      (typing
        (type)))
    (eol_comment)
    (variable
      (name)
      (typing
        (type)))))

==================
asterisk in column 1 is a comment, anywhere else an operator
==================

*"* use this source file for your ABAP unit test classes
lv_a = lv_b * 2.
* a comment between statements
lv_a = lv_b
       * 2.
*lv_a = lv_b * 2.

---

(program
  (bol_comment)
  (assignment
    (name)
    (arithmetic_expression
      (name)
      (numeric_literal)))
  (bol_comment)
  (assignment
    (name)
    (arithmetic_expression
      (name)
      (numeric_literal)))
  (bol_comment))

==================
asterisk mid-line does not end the statement early
==================

class lcl implementation.
  method one.
    lv = a * 2.
  endmethod.
  method two.
    lv = b.
  endmethod.
endclass.

---

(program
  (class_implementation
    (name)
    (method_implementation
      (name)
      (method_body
        (assignment
          (name)
          (arithmetic_expression
            (name)
            (numeric_literal)))))
    (method_implementation
      (name)
      (method_body
        (assignment
          (name)
          (name))))))
